Day 15 solution; day 16 prep; docs.